feat: add Claude Code plugin, self-gate, and AST-aware settings matching
Add Claude Code plugin with /bash-gates:review skill for interactive
pending approval management. Superpowers-style layout -- .claude-plugin/
holds manifest + marketplace, skills/ at repo root.

Add bash_gates self-permission gate (rules/bash_gates.toml +
src/gates/bash_gates.rs): read-only commands auto-allow, mutations ask.

Fix settings.json pattern matching for compound commands -- rules like
Bash(npm install:*) now match "cd /tmp && npm install" by checking
each AST-parsed sub-command individually. Deny rules also catch
dangerous sub-commands hidden in compound chains.

- Fix marketplace.json format to match official convention
- Remove plugin hooks (binary handles installation via hooks add)
- Remove allowed-tools from review skill (manual approval preferred)
- Add plugin README with skill docs and install instructions
- Update release notes with hooks add and plugin install section
- Update AGENTS.md and README.md: 13 gates, plugin docs, self-gate docs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,22 +166,10 @@ jobs:
             chmod +x ~/.local/bin/bash-gates
             ```
 
-            Then add to `~/.claude/settings.json`:
+            Then configure Claude Code hooks:
 
-            ```json
-            {
-              "hooks": {
-                "PreToolUse": [
-                  {
-                    "matcher": "Bash",
-                    "hooks": [{
-                      "type": "command",
-                      "command": "~/.local/bin/bash-gates"
-                    }]
-                  }
-                ]
-              }
-            }
+            ```bash
+            bash-gates hooks add -s user
             ```
 
             ## Downloads
@@ -192,6 +180,17 @@ jobs:
             | Linux ARM64 | [bash-gates-linux-arm64](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag.outputs.TAG }}/bash-gates-linux-arm64) |
             | macOS ARM64 | [bash-gates-darwin-arm64](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag.outputs.TAG }}/bash-gates-darwin-arm64) |
             | macOS x64 | [bash-gates-darwin-amd64](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag.outputs.TAG }}/bash-gates-darwin-amd64) |
+
+            ## Claude Code Plugin (Optional)
+
+            Install as a plugin for the `/bash-gates:review` skill:
+
+            ```
+            /plugin marketplace add ${{ github.repository }}
+            /plugin install bash-gates@camjac251-bash-gates
+            ```
+
+            See the [plugin README](https://github.com/${{ github.repository }}/tree/main/.claude-plugin#readme) for details.
 
             **[Documentation](https://github.com/${{ github.repository }}#readme)**
           files: artifacts/*
