feat: add missing read-only gates from doti session analysis
Allow read-only git subcommands:
- check-ignore, check-attr, grep, merge-base, show-ref

Allow read-only mise subcommand:
- registry (was ask, moved to allow)

Allow read shell builtin:
- Used in while-read pipe patterns

Add rustc gate:
- --version, --print, --explain -> allow; compilation -> ask

Add rustup gate:
- show, toolchain list, which, doc -> allow
- install, update, default -> ask

Add rmdir to filesystem gate:
- Properly handled as ask with reason "Removing directory (if empty)"

--- a/rules/basics.toml
+++ b/rules/basics.toml
@@ -201,6 +201,9 @@ safe_commands = [
     "test",
     "[",
     "[[",
+
+    # Shell builtins (used in while read loops, etc.)
+    "read",
 ]
 
 [meta]
